// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenuPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiContextMenuPanel testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
  tabindex="-1"
>
  <div>
    Hello
  </div>
</div>
`;

exports[`EuiContextMenuPanel props accessibility aria-current is set on the selected item 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <div>
    <button
      class="euiContextMenuItem"
      data-test-subj="itemA"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenuItem__text"
        >
          Option A
        </span>
      </span>
    </button>
    <button
      class="euiContextMenuItem"
      data-test-subj="itemB"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenuItem__text"
        >
          Option B
        </span>
      </span>
    </button>
    <button
      class="euiContextMenuItem"
      data-test-subj="itemC"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenuItem__text"
        >
          Option C
        </span>
      </span>
    </button>
    <button
      aria-current="true"
      class="euiContextMenuItem"
      data-test-subj="itemD"
      type="button"
    >
      <span
        class="euiContextMenu__itemLayout"
      >
        <span
          class="euiContextMenuItem__text"
        >
          Option D
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`EuiContextMenuPanel props onClose renders a button as a title 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <button
    class="euiContextMenuPanelTitle"
    data-test-subj="contextMenuPanelTitleButton"
    type="button"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      <span
        class="euiContextMenu__icon"
        data-euiicon-type="arrowLeft"
      />
      <span
        class="euiContextMenu__text"
      >
        Title
      </span>
    </span>
  </button>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props size m is rendered 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <div
    class="euiContextMenuPanelTitle"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      Title
    </span>
  </div>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props size s is rendered 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <div
    class="euiContextMenuPanelTitle euiContextMenuPanelTitle--small"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      Title
    </span>
  </div>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props title is rendered 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="-1"
>
  <div
    class="euiContextMenuPanelTitle"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      Title
    </span>
  </div>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection next with transitionType in is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txInLeft"
  tabindex="-1"
>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection next with transitionType out is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txOutLeft"
  tabindex="-1"
>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection previous with transitionType in is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txInRight"
  tabindex="-1"
>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection previous with transitionType out is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txOutRight"
  tabindex="-1"
>
  <div />
</div>
`;
